syntax = "proto3";

option go_package = "github.com/cerminan/torrent/pb";

service Torrent {
  rpc Files(FilesRequest) returns (FilesResponse) {}
  rpc ReadAt(ReadAtRequest) returns (ReadAtResponse) {}
  rpc IsMagnet(IsMagnetRequest) returns (IsMagnetResponse) {}
}

message FilesRequest {
  string magnet = 1;
}

message FilesResponse {
  repeated File files = 1;
}

message File {
  string torrentHash = 1;
  string name = 2;
  int64 length = 3;
}

message ReadAtRequest {
  File file = 1;
  int32 index = 2;
  int64 off = 3;
  int64 ln = 4;
}

message ReadAtResponse {
  bytes buffer = 1;
}

message IsMagnetRequest{
  string magnet = 1;
}

message IsMagnetResponse {
  bool valid = 1;
}
